webapps/test/v1/WEB-INF/jsp/error/404.jsp
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="UTF-8" />
<link rel="stylesheet" href="${pageContext.request.contextPath}/css/error.css">
<title>404 Not Found</title>
</head>
<body>
	<div class="error-container">
		<h1>404 Page Not Found</h1>
		<p>The requested URL was not found on this server.
		</p>
	</div>
</body>
</html>